feat: Criação da rota API de Cadastrar cliente com identificação, contatos e segmento
